# the_c_programming_language_solutions

./: README.md
Ch1/: CMakeLists.txt  Makefile  ch1_10_make_vis_special_char.c  ch1_12_wordcounting.c  ch1_13_word_hist.c  ch1_14_char_hist.c  ch1_14_char_hist_lower.c  ch1_15_ftoc_function.c  ch1_16_prints_long_line_len.c  ch1_17_prints_line80_char.c  ch1_18_rem_trailing_bl.c  ch1_19_reverse_string.c  ch1_1_helloworld.c  ch1_2_escape_secquence.c  ch1_4_ctof.c  ch1_5_ftoc.c  ch1_6_evalEOF.c  ch1_7_printEOF.c  ch1_8_count_bl_t_nl.c  ch1_9_copystring.c
Ch2/: ch2_1_determine_ranges_of_vars_dir_comp  ch2_1_determine_ranges_of_vars_dir_comp.c  ch2_1_determine_ranges_of_vars_std_headers  ch2_1_determine_ranges_of_vars_std_headers.c  ch2_2_equivalent_for  ch2_2_equivalent_for.c
